Add border radius for mobile version of project images

--- a/css/main.css
+++ b/css/main.css
@@ -483,6 +483,7 @@ body {
 }
 .project-page .gallery #mobile-images .gallery__image img {
   width: 250px;
+  border-radius: 40px;
 }
 .project-page .gallery__image img {
   height: 100%;
