--- a/css/main.css
+++ b/css/main.css
@@ -36,13 +36,13 @@ p {
 }
 
 button,
-input[type='submit'] {
+input[type=submit] {
   cursor: pointer;
 }
 
 body {
   font-size: 1.6rem;
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
   min-height: 100vh;
   padding: 0.05px 0;
 }
@@ -71,7 +71,7 @@ body {
 .contact__h {
   font-size: clamp(2.9rem, 5vw, 4.5rem);
   font-weight: 700;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
 .work__h,
@@ -83,7 +83,7 @@ body {
 .work__h,
 .about__h,
 .about .skills__h {
-  color: #00171f;
+  color: #00171F;
 }
 
 .resume-link,
@@ -91,7 +91,7 @@ body {
 .project-page .project-details .view-code-btn {
   font-size: 1.5rem;
   font-weight: 600;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   background-color: #003052;
   border-radius: 4px;
   color: white;
@@ -101,7 +101,7 @@ body {
   padding-right: 0.8em;
   text-align: center;
   border: 2px solid #003052;
-  box-shadow: 0 3px 4px 0 #00000040;
+  box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.2509803922);
 }
 
 .project-page .project-details__desc,
@@ -124,7 +124,7 @@ body {
   left: 0;
   display: flex;
   align-items: center;
-  box-shadow: 0 2px 8px 0 #00000040;
+  box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.2509803922);
   z-index: 10;
 }
 .header__splitter {
@@ -163,7 +163,7 @@ body {
 .home {
   padding-top: 56px;
   min-height: 100vh;
-  background: #00171f;
+  background: #00171F;
   display: flex;
   align-items: center;
 }
@@ -177,10 +177,9 @@ body {
   color: white;
   max-width: 520px;
 }
-.home__content__name,
-.home__content__title {
+.home__content__name, .home__content__title {
   text-transform: uppercase;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   letter-spacing: 1.3px;
 }
 .home__content__name {
@@ -189,7 +188,7 @@ body {
   margin-bottom: 1.5em;
 }
 .home__content__skill {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: clamp(3.6rem, 6.1vw, 5.6rem);
   font-weight: 800;
   margin-bottom: 0.35em;
@@ -213,7 +212,7 @@ body {
 }
 .home__content__work-link img {
   border-radius: 50%;
-  box-shadow: -1px 3px 4px 0px #00000080;
+  box-shadow: -1px 3px 4px 0px rgba(0, 0, 0, 0.5019607843);
 }
 .home .cube {
   display: grid;
@@ -232,7 +231,7 @@ body {
 .work__click-text {
   font-size: 1.4rem;
   font-weight: 300;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   margin-bottom: 1em;
   display: none;
 }
@@ -243,7 +242,7 @@ body {
 }
 .work .project {
   border-radius: 8px;
-  box-shadow: -1px 1px 2px 0 #00000059;
+  box-shadow: -1px 1px 2px 0 rgba(0, 0, 0, 0.3490196078);
   min-height: 150px;
   flex: 265px;
   position: relative;
@@ -301,7 +300,7 @@ body {
   max-width: 550px;
 }
 .about .personal-details p {
-  line-height: 1.7;
+  line-height: 2;
 }
 .about .personal-details p + p {
   margin-top: 1.3em;
@@ -312,7 +311,7 @@ body {
 .about .skills__h {
   font-size: clamp(2.2rem, 4vw, 2.8rem);
   font-weight: 700;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   margin-bottom: 1.5em;
   text-align: center;
   text-transform: uppercase;
@@ -327,7 +326,7 @@ body {
 .about .skill {
   line-height: 1.5;
   white-space: nowrap;
-  background-color: #e0e0e0;
+  background-color: rgb(224, 224, 224);
   border-radius: 1em;
   padding-top: 0.5em;
   padding-bottom: 0.5em;
@@ -341,7 +340,7 @@ body {
       Contact Section Styles
 ********************************/
 .contact {
-  background: #00171f;
+  background: #00171F;
   color: white;
   padding: clamp(3em, 4.8vw, 6em) 0;
 }
@@ -351,26 +350,18 @@ body {
 }
 .contact__info {
   display: grid;
-  grid-template-columns: 2fr 2fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 0.5fr;
   grid-gap: 2em 2.5em;
   font-size: 1.6rem;
 }
-.contact__info__address h2,
-.contact__info__phone h2,
-.contact__info__email h2 {
+.contact__info__address h2, .contact__info__phone h2, .contact__info__email h2 {
   font-size: 1.4rem;
   font-weight: 600;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   margin-bottom: 0.6em;
 }
-
-.contact__info__email span,
-.contact__info__phone span {
+.contact__info__email span, .contact__info__phone span {
   display: block;
-  font-family: 'Montserrat', sans-serif;
-}
-.contact__info__address--temporary {
-  grid-column: 1;
 }
 .contact__info__social-list {
   display: flex;
@@ -389,7 +380,6 @@ body {
 }
 .contact__info p {
   line-height: 1.4;
-  font-family: 'Montserrat', sans-serif;
 }
 
 /******************************
@@ -404,8 +394,8 @@ body {
 }
 .project-page .project-details__title,
 .project-page .gallery__h {
-  font-family: 'Montserrat', sans-serif;
-  color: #00171f;
+  font-family: "Montserrat", sans-serif;
+  color: #00171F;
 }
 .project-page .project-details {
   padding-top: 56px;
@@ -457,7 +447,7 @@ body {
 .project-page .gallery__screen-toggle-btn {
   font-size: 1.4rem;
   font-weight: 800;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   padding: 1em 1em 0.5em 1em;
   color: #5f5f5f;
 }
@@ -476,7 +466,7 @@ body {
   max-width: 1280px;
 }
 .project-page .gallery #desktop-images .gallery__image {
-  box-shadow: 0 0px 6px 0px #0a0a0a26;
+  box-shadow: 0 0px 6px 0px rgba(10, 10, 10, 0.1490196078);
 }
 .project-page .gallery #mobile-images {
   grid-gap: 1.5em 1.5em;
@@ -486,7 +476,6 @@ body {
 }
 .project-page .gallery #mobile-images .gallery__image img {
   width: 250px;
-  border-radius: 40px;
 }
 .project-page .gallery__image img {
   height: 100%;
@@ -499,16 +488,20 @@ body {
   .home .cube {
     display: none;
   }
+  .contact__info {
+    grid-template-columns: 1fr 1fr;
+  }
+  .contact__info__social-list {
+    justify-self: flex-start;
+  }
 }
 @media (max-width: 768px) {
   .header__splitter {
     justify-content: flex-end;
   }
-
   .work__click-text {
     display: block;
   }
-
   .about__splitter {
     grid-template-columns: initial;
   }
@@ -518,14 +511,6 @@ body {
   .about .skill {
     white-space: initial;
   }
-
-  .contact__info {
-    grid-template-columns: 1fr 1fr;
-  }
-  .contact__info__social-list {
-    justify-self: flex-start;
-  }
-
   .project-page .gallery #mobile-images {
     justify-content: center;
   }
@@ -534,7 +519,6 @@ body {
   .home__content {
     grid-gap: 1.5em;
   }
-
   .about .my-img {
     display: none;
   }
@@ -544,14 +528,12 @@ body {
   .about .skills-list {
     justify-content: flex-start;
   }
-
   .contact__info {
     grid-template-columns: 1fr;
   }
   .contact__info__social-list {
     grid-column: 1;
   }
-
   .project-page .gallery .desktop-images-wrapper {
     width: 100%;
   }
@@ -572,7 +554,6 @@ body {
   .header .nav {
     display: none;
   }
-
   .bottom-nav {
     display: block;
     position: fixed;
@@ -596,7 +577,6 @@ body {
     font-weight: 500;
     padding: 19px 1em;
   }
-
   .home {
     padding-top: 48px;
   }
@@ -606,11 +586,9 @@ body {
   .home__content__work-link {
     margin-top: 3.2em;
   }
-
   .contact {
     padding-bottom: 6em;
   }
-
   .project-page .bottom-nav {
     border-top: none;
   }
@@ -622,13 +600,11 @@ body {
   .wrapper {
     width: 82%;
   }
-
   .resume-link,
   .project-page .project-details .preview-site-btn,
   .project-page .project-details .view-code-btn {
     font-size: 1.25rem;
   }
-
   .home__content__name {
     font-size: 1.2rem;
     font-weight: 300;
@@ -637,7 +613,6 @@ body {
     font-size: clamp(3rem, 9.5vw, 3.8rem);
     margin-bottom: 0.4em;
   }
-
   .about .skill {
     background: none;
     padding: 0;
@@ -645,7 +620,6 @@ body {
   .about .skills-list {
     grid-gap: 1.7em 2.2em;
   }
-
   .project-page .gallery__screen-toggle-btns {
     grid-gap: 1em;
   }
@@ -654,14 +628,10 @@ body {
   .wrapper {
     width: 90%;
   }
-
   .bottom-nav li + li {
     margin-left: 0em;
   }
-
   .project-page .project-details__ctas .view-code-btn {
     margin-left: 1em;
   }
-}
-
-/*# sourceMappingURL=main.css.map */
+}/*# sourceMappingURL=main.css.map */
