style: add border radius for mobile project images

--- a/css/main.css
+++ b/css/main.css
@@ -476,6 +476,7 @@ body {
 }
 .project-page .gallery #mobile-images .gallery__image img {
   width: 250px;
+  border-radius: 39px;
 }
 .project-page .gallery__image img {
   height: 100%;
